# seaf-share

./: .woodpecker.yml  Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  seafile.rs
